# moneytransfer

./: README.md  build.sh  config.xml  meson.build  meson.options  nginx-microservice.cfg
sql/: database.postgres.sql
src/: mr_module.vala
src/Classes/: GoogleAuth.vala  UserProfile.vala
src/Controllers/: BaseController.vala  MoneyRequestController.vala  ParametersController.vala  PaymentMethodsController.vala  VeriffController.vala  WalletsController.vala  WithdrawalsController.vala
src/Dto/: DtoAttachmentData.vala  DtoMoneyRequest.vala  DtoResponse.vala  DtoVeriffMedia.vala  DtoVeriffRequest.vala  DtoVeriffResponse.vala  DtoVeriffSession.vala
src/Entities/: Attachment.vala  MoneyRequest.vala  Parameter.vala  PaymentMethod.vala  RequestState.vala  VeriffSession.vala  Wallet.vala  WalletCharge.vala  Withdraw.vala
src/Models/: AuthenticationModel.vala  MoneyRequestsModel.vala  WalletsModel.vala
src/Services/: ServiceFirebase.vala  ServiceVeriff.vala
